# news-client

./: .clang-format  CMakeLists.txt  README.md  loginwindow.cpp  loginwindow.h  main.cpp
src/: loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  news.cpp  news.h  newscontent.cpp  newscontent.h  newscontent.ui
